# mystr.h

./: CMakeLists.txt  app.c  test.txt
include/: mystr.h  queue.h  stack.h  stackpp.h  std_types.h
src/: mystr.c  queue.c  stack.c  stackpp.c
